--- a/.github/workflows/sandpaper-main.yaml
+++ b/.github/workflows/sandpaper-main.yaml
@@ -35,6 +35,8 @@ jobs:
 
       - name: "Checkout Lesson"
         uses: actions/checkout@v4
+        with:
+          ref: l10n_main
 
       - name: "Set up R"
         uses: r-lib/actions/setup-r@v2
